--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <link rel="stylesheet" href="./src/styles/index.css" />
     <link rel="stylesheet" href="./src/styles/responsive.css" />
     <!-- SCRIPTS -->
-    <script src="./src/scripts/theme.js" defer></script>
+    <!-- <script src="./src/scripts/theme.js" defer></script>
     <script src="./src/scripts/productsData.js" defer></script>
-    <script src="./src/scripts/input.js" defer></script>
-    <script src="./src/scripts/index.js" defer></script>
+    <script src="./src/scripts/input.js" defer></script> -->
+    <script  type="module" src="./src/scripts/index.js" defer></script>
   </head>
   <body>
     <header class="header container">
       <h1 class="header__title title1">open music</h1>
-      <button class="header__btn"></button>
+      <button class="header__btn header__btn--dark-mode"></button>
     </header>
     <main class="container">
       <section class="genres">
